2010-07-13  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet/AspNetSyntaxMode.cs: Added styles for
	  templated regions in files, e.g. ASP.NET and T4.

2010-07-12  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Html/HtmlParser.cs:
	* MonoDevelop.AspNet/CodeBehind.cs:
	* MonoDevelop.AspNet/AspNetAppProject.cs:
	* MonoDevelop.AspNet.Parser/AspNetParser.cs:
	* MonoDevelop.AspNet/AspNetParserService.cs:
	* MonoDevelop.AspNet/VerifyCodeBehindBuildStep.cs: Track
	  ProjectDomService/Parser API.

	* MonoDevelop.AspNet.addin.xml: Track ProjectDomService/Parser
	  API. Also, treat spark files as html.

2010-07-11  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Gui/AspProjectDom.cs: Workaround for gmcs
	  bug.

2010-06-16  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AspNet/AspNetSyntaxMode.cs: Fixed 'Bug 611859 -
	  aspx highlighting issues'.

2010-06-14  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.AspNet/AspNetExecutionHandler.cs: Track api
	  changes.

2010-06-07  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet/AspNetFileDescriptionTemplate.cs: Track
	  SingleFileDescription template API.

2010-06-04  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AspNet/AspNetSyntaxMode.cs: Fixed 'Bug 611558 -
	  Phantom text in editor after typing </script>'.

2010-06-04  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs: Partial
	  support for HTML encoded expressions and script blocks.

2010-06-04  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.StateEngine/AspNetDom.cs:
	* MonoDevelop.AspNet.StateEngine/AspNetExpressionState.cs: Add
	  support for HTML encoded expressions in the state engine.

	* MonoDevelop.AspNet.StateEngine/HtmlTagState.cs:
	* MonoDevelop.AspNet.StateEngine/HtmlScriptBodyState.cs:
	  Support for HTML script blocks.

	* Makefile.am:
	* MonoDevelop.AspNet.csproj: Added file to project.
